--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -36,8 +36,8 @@
 
   <body>
     <div class="container">
-      <div class="cell1">pink</div>
-      <div class="cell2">blanchedalmond</div>
+      <div class="cell1">First Cell</div>
+      <div class="cell2">Second Cell</div>
     </div>
   </body>
 </html>
