--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -9,8 +9,8 @@
 
     <table>
         <tr>
-            <td id="cell1">Y</td>
-            <td id="cell2">N</td>
+            <td id="cell1">First Cell</td>
+            <td id="cell2">Second Cell</td>
         </tr>
     </table>
 
