--- a/cell03/ex01/balloon.html
+++ b/cell03/ex01/balloon.html
@@ -1,62 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explode the Balloon</title>
-    <style>
-        body {
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f4;
-            user-select: none; /* Prevent text selection and blinking cursor */
-        }
-
-        .balloon {
-            width: 200px;
-            height: 200px;
-            background-color: red;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: all 0.2s ease;
-            user-select: none; /* Prevent text selection and blinking cursor */
-        }
-    </style>
+<title>Balloon</title>
+<style>
+#balloon {
+  width: 200px;
+  height: 200px;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  user-select: none;
+}
+</style>
 </head>
 <body>
-    <div class="balloon"></div>
 
-    <script>
-        const balloon = document.querySelector('.balloon');
-        let size = 200;
-        const maxSize = 420;
-        const minSize = 200;
-        const colorSequence = ['red', 'green', 'blue'];
-        let colorIndex = 0;
+<div id="balloon"></div>
 
-        balloon.addEventListener('click', () => {
-            size += 10;
-            if (size > maxSize) {
-                size = minSize;
-            }
-            balloon.style.width = `${size}px`;
-            balloon.style.height = `${size}px`;
-            colorIndex = (colorIndex + 1) % colorSequence.length;
-            balloon.style.backgroundColor = colorSequence[colorIndex];
-        });
+<script>
+const balloon = document.getElementById('balloon');
+let size = 200;
+let colors = ['red', 'green', 'blue'];
+let currentColorIndex = 0;
+let isDragging = false; // เพิ่มตัวแปรสำหรับตรวจสอบการลาก
 
-        balloon.addEventListener('mouseover', () => {
-            size = Math.max(size - 5, minSize);
-            balloon.style.width = `${size}px`;
-            balloon.style.height = `${size}px`;
-            colorIndex = (colorIndex - 1 + colorSequence.length) % colorSequence.length;
-            balloon.style.backgroundColor = colorSequence[colorIndex];
-        });
-    </script>
+balloon.addEventListener('click', () => {
+  if (!isDragging) { // ตรวจสอบว่าไม่ได้ลากอยู่
+    size += 10;
+    balloon.style.width = size + 'px';
+    balloon.style.height = size + 'px';
+
+    // เปลี่ยนสีตามลำดับ
+    currentColorIndex = (currentColorIndex + 1) % colors.length;
+    balloon.style.backgroundColor = colors[currentColorIndex];
+
+    if (size > 420) {
+      balloon.style.width = '200px';
+      balloon.style.height = '200px';
+      size = 200;
+      currentColorIndex = 0; // เริ่มสีใหม่ที่แดงเมื่อลูกโป่งแตก
+      balloon.style.backgroundColor = colors[currentColorIndex];
+    }
+  }
+});
+
+balloon.addEventListener('mousedown', () => {
+  isDragging = true; // เริ่มการลาก
+});
+
+balloon.addEventListener('mouseup', () => {
+  isDragging = false; // สิ้นสุดการลาก
+});
+
+balloon.addEventListener('mouseout', () => {
+  if (isDragging) { // ตรวจสอบว่ากำลังลากอยู่
+    size -= 5;
+    if (size < 200) {
+      size = 200;
+    }
+    balloon.style.width = size + 'px';
+    balloon.style.height = size + 'px';
+
+    // เปลี่ยนสีตามลำดับย้อนกลับ
+    currentColorIndex = (currentColorIndex - 1 + colors.length) % colors.length;
+    balloon.style.backgroundColor = colors[currentColorIndex];
+  }
+});
+</script>
+
 </body>
 </html>
