--- a/cell03/ex03/index.html
+++ b/cell03/ex03/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <h1>  To-Do List  </h1>
     <style>
         body {
             font-family: Arial, sans-serif;
